# Cruiser

./: .gitignore  .gitmodules  README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/ros_pololu_servo/: MotorCalibration.h  MotorCommand.h  MotorRange.h  MotorRangeRequest.h  MotorRangeResponse.h  MotorState.h  MotorStateList.h  pololu_trajectoryAction.h  pololu_trajectoryActionFeedback.h  pololu_trajectoryActionGoal.h  pololu_trajectoryActionResult.h  pololu_trajectoryFeedback.h  pololu_trajectoryGoal.h  pololu_trajectoryResult.h
devel/lib/pkgconfig/: pololu_car.pc  real-sense-wrapper.pc  ros_pololu_servo.pc
devel/lib/ros_pololu_servo/: ros_pololu_servo_node
src/ball_detection/: CMakeLists.txt  package.xml
src/ball_detection/launch/: ball_detection.launch  ball_detection.launch~
src/ball_detection/src/: ball_detection.py  blob_detector.py
src/camera/: CMakeLists.txt  depth.cpp  depth_listener.py  package.xml
src/camera/launch/: camera.launch
src/camera/msg/: Depth.msg
src/camera/src/: Blob.cpp  BlobUsingDepth.cpp  depth.cpp  depth_listener.py  rgb.cpp  test.cpp
src/pid_controller/: CMakeLists.txt  package.xml
src/pid_controller/launch/: parameters.yaml  pid_controller.launch
src/pid_controller/msg/: Depth.msg  pid_data.msg  pid_gains.msg
src/pid_controller/src/: PID.py  (+3 more)
src/pololu_car/: CMakeLists.txt
src/real-sense-wrapper/: CMakeLists.txt  depth.cpp  package.xml
src/ros_pololu_servo/: CMakeLists.txt
src/state_machine/: CMakeLists.txt  output.txt  package.xml
src/stopSign/: stopSignNode.py
src/stop_sign/: CMakeLists.txt  package.xml
(+113 files in other folders)
